<resources>
    <string name="app_name">Niev Time</string>
    <string name="password">Jelszó</string>
    <string name="password_again">Jelszó újra</string>
    <string name="user_name">Név</string>
    <string name="log_in">Bejelentkezés</string>
    <string name="resetPassword">Elfelejtette a jelszavát?</string>
    <string name="register">Regisztráció</string>
    <string name="registration">Regisztráció</string>
    <string name="cancel">Mégse</string>
    <string name="email_address">E-mail cím</string>
    <string name="verified">E-mail cím megerősítve!</string>
    <string name="not_verified">E-mail cím nincs megerősítve!</string>
    <string name="loginGoogle">Bejelentkezés Google fiókkal</string>
    <string name="worker">Dolgozó</string>
    <string name="employer">Munkáltató</string>
    <string name="default_web_client_id">1</string>
    <string name="agreement">Regisztrációval hozzájárulok személyes adataim kezeléséhez.</string>
    <string name="log_out">Kijelentkezés</string>
    <string name="edit_profile">Profil szerkesztése</string>
    <string name="save">Mentés</string>
    <string name="userIdNumber">Személyigazolványszám</string>
    <string name="userTAJNumber">TAJ szám</string>
    <string name="BirthDate">Születési dátum</string>
    <string name="useradokartya">Adószám</string>
    <string name="userlakcim">Lakcím</string>
    <string name="userdegree">Végzettség</string>
    <string name="accountType">Foglalkozás</string>
    <string name="userId">Igazolványszám</string>
    <string name="userLakcimPlaceholder">Lakcímkártya szám</string>
    <string name="company_name">Cég</string>
    <string name="manageWorkers">Dolgozók kezelése</string>
    <string name="unemployed">Munkanélküli</string>
    <string name="addWorker">Dolgozó hozzáadása</string>
    <string name="add_worker">Hozzáadás</string>
    <string name="addWorkerPlaceholder">Dolgozó hozzáadása</string>
    <string name="workerName">Dolgozó neve</string>
    <string name="kickWorker">Dolgozó eltávolítása</string>
    <string name="kickWorkerAccept">Eltávolítás</string>
    <string name="workerEmail">Dolgozó email címe</string>
    <string name="workerImageDesc">TODO</string>
    <string name="userMunkakor">Munkakör</string>
    <string name="addWorkHours">Dolgozott óra megadása</string>
    <string name="addWorkHour">Hozzáadás</string>
    <string name="workTimeStart">Munka kezdete</string>
    <string name="workTimeEnd">Munka vége</string>
    <string name="lunchTimeStart">Ebédidő kezdete</string>
    <string name="lunchTimeEnd">Ebédidő vége</string>
    <string name="remove_worker_alert">Biztos hogy eltávolítja:</string>
    <string name="showWorkHours">Dolgozott óra megtekintése</string>
    <string name="workDay">Munkanap</string>
    <string name="workTime">Munkaidő</string>
    <string name="monthHours">Ebben a hónapban: </string>
    <string name="check_worker_hours">Dolgozó munkaidő</string>
    <string name="changeTheme">Téma megváltoztatása</string>
    <string name="resetEmail">Adja meg az e-mail címét</string>
    <string name="sendEmail">Elküldés</string>
</resources>