<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/manageWorkers"
        android:title="@string/manageWorkers"
        android:icon="@drawable/ic_manage_workers"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/profile"
        android:title="@string/edit_profile"
        android:icon="@drawable/ic_edit_profile"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/logout"
        android:title="@string/log_out"
        android:icon="@drawable/ic_logout"
        app:showAsAction="never"
        app:actionViewClass="android.widget.SearchView"
        android:orderInCategory="1"
        />
</menu>