<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.niev.munkaidonyilvantartoalkalmazas.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profileMargin"
            android:ems="10"
            android:hint="@string/email_address"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextUserName"
            android:layout_marginTop="@dimen/register_margin_top"
            android:ems="10"
            android:hint="@string/password"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextPassword"
            android:layout_marginTop="@dimen/register_margin_top"
            android:onClick="login"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/log_in" />

        <Button
            android:id="@+id/loginWithGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginButton"
            android:layout_marginTop="@dimen/register_margin_top"
            android:onClick="loginWithGoogle"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/loginGoogle" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginWithGoogle"
            android:layout_marginTop="@dimen/register_margin_top"
            android:onClick="register"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/registration" />
    </RelativeLayout>
</ScrollView>
