<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <TextView
        android:id="@+id/addWorkerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/register_margin_top"
        android:text="@string/addWorkerPlaceholder"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/workerID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addWorkerTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/register_margin_top"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/userIdNumber"
        android:inputType="text"
        android:maxLength="8"/>


    <EditText
        android:id="@+id/userMunkakor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/workerID"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/register_margin_top"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/userMunkakor"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userMunkakor"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/register_margin_top"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addWorkerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_worker" />

        <Button
            android:id="@+id/cancelAddWorker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/cancel" />
    </LinearLayout>

</RelativeLayout>