<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/workerTypeImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/workerImageDesc"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/workerName"
            style="@style/WorkerDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/workerTypeImage"
            android:layout_centerHorizontal="true"
            android:paddingTop="5dp"
            android:text="@string/workerName"
            android:textColor="?android:textColorSecondary" />
        <TextView
            android:id="@+id/userMunkakor"
            style="@style/WorkerDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/workerName"
            android:layout_centerHorizontal="true"
            android:text="@string/userMunkakor"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/workerEmail"
            style="@style/WorkerDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userMunkakor"
            android:layout_centerHorizontal="true"
            android:text="@string/workerEmail" />

        <TextView
            style="@style/WorkerDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/workerEmail"
            android:layout_alignBottom="@+id/userId"
            android:ems="10"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:textSize="@dimen/profilePlaceholder"
            android:text="@string/userIdNumber" />

        <TextView
            android:id="@+id/userId"
            style="@style/WorkerDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/workerEmail"
            android:layout_marginStart="@dimen/workerMargin"
            android:padding="5dp"
            android:text="@string/userIdNumber" />


        <TextView
            style="@style/WorkerDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userId"
            android:layout_alignBottom="@+id/userLakcimNumber"
            android:ems="10"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:textSize="@dimen/profilePlaceholder"
            android:text="@string/userLakcimPlaceholder" />

        <TextView
            android:id="@+id/userLakcimNumber"
            style="@style/WorkerDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userId"
            android:layout_marginStart="@dimen/workerMargin"
            android:padding="5dp"
            android:text="@string/userLakcimPlaceholder" />


        <TextView
            style="@style/WorkerDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userLakcimNumber"
            android:layout_alignBottom="@+id/userAdoKartya"
            android:ems="10"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:textSize="@dimen/profilePlaceholder"
            android:text="@string/useradokartya" />

        <TextView
            android:id="@+id/userAdoKartya"
            style="@style/WorkerDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userLakcimNumber"
            android:layout_marginStart="@dimen/workerMargin"
            android:padding="5dp"
            android:text="@string/useradokartya" />


            <TextView
                style="@style/WorkerDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userAdoKartya"
                android:layout_alignBottom="@+id/userTAJNumber"
                android:ems="10"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:textSize="@dimen/profilePlaceholder"
                android:text="@string/userTAJNumber" />

            <TextView
                android:id="@+id/userTAJNumber"
                style="@style/WorkerDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userAdoKartya"
                android:layout_marginStart="@dimen/workerMargin"
                android:padding="5dp"
                android:text="@string/userTAJNumber" />


            <TextView
                style="@style/WorkerDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userTAJNumber"
                android:layout_alignBottom="@+id/userDegree"
                android:ems="10"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:textSize="@dimen/profilePlaceholder"
                android:text="@string/userdegree" />

            <TextView
                android:id="@+id/userDegree"
                style="@style/WorkerDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userTAJNumber"
                android:padding="5dp"
                android:layout_marginStart="@dimen/workerMargin"
                android:text="@string/userdegree" />


            <TextView
                style="@style/WorkerDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userDegree"
                android:layout_alignBottom="@+id/userBirthDate"
                android:ems="10"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:textSize="@dimen/profilePlaceholder"
                android:text="@string/BirthDate" />

            <TextView
                android:id="@+id/userBirthDate"
                style="@style/WorkerDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userDegree"
                android:padding="5dp"
                android:layout_marginStart="@dimen/workerMargin"
                android:text="@string/BirthDate" />

        <Button
            android:id="@+id/kickWorker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userBirthDate"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/darkRed"
            android:text="@string/kickWorker" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>